--- a/examples/alan-example-integration-kotlin/app/build.gradle
+++ b/examples/alan-example-integration-kotlin/app/build.gradle
@@ -30,9 +30,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'app.alan:sdk:4.7.13'
+    implementation 'app.alan:sdk:4.7.15'
 }
