--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,15 @@ orbs:
 
 jobs:
   build:
+    working_directory: ./examples/AlanSampleApp
+    
     executor: android/android
         
     steps:
       - checkout
       - run:
+          name: Print current folder
+          command: pwd
+      - run:
           name: Build Sample App (from examples/AlanSampleApp)
-          working_directory: ~/examples/AlanSampleApp
           command: ./gradlew build
