--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,5 +18,11 @@ jobs:
           name: Print current folder content
           command: ls -l
       - run:
+          name: Go to sample app folder
+          command: cd examples/AlanSampleApp
+      - run:
+          name: Print current folder path
+          command: pwd          
+      - run:
           name: Build Sample App (from examples/AlanSampleApp)
           command: ./gradlew build
