--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,11 @@ orbs:
 
 jobs:
   build:
-    # working_directory: ./examples/AlanSampleApp
-    
     executor: android/android
         
     steps:
       - checkout      
       - run:
           name: Build Sample App (from examples/AlanSampleApp)
-          command: ./examples/AlanSampleApp/gradlew build
+          # command: ./examples/AlanSampleApp/gradlew build
+          command: ./examples/AlanSampleApp/gradlew assembleRelease
